# Motion-Test

./: CMakeLists.txt  main.cpp
EntityControlFiles/: BackgroundControl.txt  CatControl.txt  David.txt  ExampleControlFile.txt  FireballControl.txt  PlatformPlankControl.txt  SoldierIdleControl.txt  WallCobbleControl.txt
Headers/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityLoader.cpp  EntityLoader.h  KinematicHandler.cpp  KinematicHandler.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Particle.cpp  Particle.h  Player.cpp  Player.h  SheetAnimation.cpp  SheetAnimation.h
